k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appgw
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: $(APPGW_SSL_CERT)
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: $(TENANT).$(HOSTNAME)
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-world
            port: 
              number: 80
